tests/baselines/reference/parserRegularExpression2.errors.txt
tests/cases/conformance/parser/ecmascript5/RegularExpressions/parserRegularExpression2.ts(1,1): error TS2304: Cannot find name 'href'.


==== tests/cases/conformance/parser/ecmascript5/RegularExpressions/parserRegularExpression2.ts (1 errors) ====
    href.match(/:\/\/(.[^/]+)/)[1];
    ~~~~
!!! error TS2304: Cannot find name 'href'.